--- a/project-1-Stephen491/src/main/webapp/financialmanagerhome.html
+++ b/project-1-Stephen491/src/main/webapp/financialmanagerhome.html
@@ -28,8 +28,8 @@
             <div class = requests-dashboard>
 
                 <table class="table table-dark table-hover" id = "reimbursements-table">
-                    <label for="searchStatus">Filter by Status: </label>
-                    <input type="text" class="search" name="searchStatus" onChange="filer()" id="searchStatus">
+                    <label for="searchStatus" id="search-label">Filter by Status: </label>
+                    <input type="text" class="search" name="searchStatus" onKeyUp="filter()" id="searchStatus">
                     <thead>
                         <tr>
                         <th scope="col">ID</th>
@@ -38,30 +38,15 @@
                         <th scope="col">Resolved</th>
                         <th scope="col">Type</th>
                         <th scope="col">Description</th>
+                        <th scope="col">Author</th>
                         <th scope="col">Resolver</th>
                         <th scope="col">Status</th>
                         <th scope="col">Receipts</th>
                         
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr>
-                        <td>1</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                        </tr>
-                        <tr>
-                        <td>2</td>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@John</td>
-                        </tr>
-                        <tr>
-                        <td>3</td>
-                        <td colspan="2">Larry the Bird</td>
-                        <td>@twitter</td>
-                        </tr>
+                    <tbody id = "reimbursements-table-data">
+  
                     </tbody>
                 </table>
             </div>
@@ -69,34 +54,41 @@
             
             <form id="new-reimbursement-form">
                 <div class="form-group">
-                  <label for="exampleFormControlInput1">Amount</label>
-                  <input type="number" class="form-control" id="amount-field" placeholder="0.00" step="0.01">
+                  <label for="exampleFormControlInput1">Author</label>
+                  <p id = "author-id"></p>
                 </div>
                 <div class="form-group">
-                  <label for="exampleFormControlSelect1">Expense type</label>
-                  <select class="form-control" id="select-type" name = type>
-                    <option>Travel</option>
-                    <option>Medical expenses</option>
-                    <option>Books and equipment</option>
-                    <option>Lodging</option>
-                    <option>Auto Mileage</option>
-                  </select>
+                  <label for="exampleFormControlInput1">Amount</label>
+                  <p id = "reimb-amount"></p>
+                </div>
+                <div class="form-group">
+                  <label for="exampleFormControlTextarea1">Type</label>
+                  <p id = "reimb-type"></p>
                 </div>
                 <div class="form-group">
                   <label for="exampleFormControlTextarea1">Description</label>
-                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                  <p id = "reimb-description"></p>
+                </div>
+                <div class="form-group">
+                  <label for="exampleFormControlTextarea1">Current Status</label>
+                  <p id = "reimb-status"></p>
                 </div>
                 <div class="form-group">
                   <label for="receipt">Receipt: </label>
-                  <input class="file-select" type="file" id="file-selector" name="receipt">
                 </div>
                 <div class="form-group">
-                  <button type="button" class="btn btn-primary btn-lg" id="submit-reimbursement" onClick="submit()">Submit</button>
+                  <label for="exampleFormControlSelect1">Update Status</label>
+                  <select class="form-control" id="select-status" name = type>
+                    <option>Pending</option>
+                    <option>Put on hold</option>
+                    <option>Accept</option>
+                    <option>Reject</option>
+                  </select>
+                </div>
+                <div class="form-group">
+                  <button type="button" class="btn btn-primary btn-lg" id="submit-reimbursement" onClick="submit()">Submit Update</button>
                 </div>
               </form>
-                <div class = "menu">
-                    <button type="button" class="btn btn-primary btn-lg" id="create-reimbursement" onClick="toggleShowForm()">Create new reimbursement request</button>
-                </div>
             </div>
 
 
