--- a/project-1-Stephen491/src/main/webapp/employeehome.html
+++ b/project-1-Stephen491/src/main/webapp/employeehome.html
@@ -58,28 +58,13 @@
                         <th scope="col">Description</th>
                         <th scope="col">Resolver</th>
                         <th scope="col">Status</th>
+
                         <th scope="col">Receipts</th>
                         
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr>
-                        <td>1</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                        </tr>
-                        <tr>
-                        <td>2</td>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@John</td>
-                        </tr>
-                        <tr>
-                        <td>3</td>
-                        <td colspan="2">Larry the Bird</td>
-                        <td>@twitter</td>
-                        </tr>
+                    <tbody id = "resolved-reimbursements-table-body">
+                
                     </tbody>
                 </table>
             </div>
