Frontend now receives username, email, and fullnames

--- a/project-1-Stephen491/src/main/webapp/employeehome.html
+++ b/project-1-Stephen491/src/main/webapp/employeehome.html
@@ -56,9 +56,11 @@
                         <th scope="col">Resolved</th>
                         <th scope="col">Type</th>
                         <th scope="col">Description</th>
-                        <th scope="col">Resolver</th>
+                        <th scope="col">Resolver ID</th> <!-- remove this when resolver username, name, and email are implemented-->
+                        <th scope="col">Resolver Username</th>
+                        <th scope="col">Resolver Name</th>
+                        <th scope="col">Resolver Email</th>
                         <th scope="col">Status</th>
-
                         <th scope="col">Receipts</th>
                         
                         </tr>
