--- a/project-1-Stephen491/src/main/webapp/financialmanagerhome.html
+++ b/project-1-Stephen491/src/main/webapp/financialmanagerhome.html
@@ -38,8 +38,14 @@
                         <th scope="col">Resolved</th>
                         <th scope="col">Type</th>
                         <th scope="col">Description</th>
-                        <th scope="col">Author</th>
-                        <th scope="col">Resolver</th>
+                        <th scope="col">Author ID</th> 
+                        <th scope="col">Author Username</th>
+                        <th scope="col">Author Name</th>
+                        <th scope="col">Author Email</th>
+                        <th scope="col">Resolver ID</th>
+                        <th scope="col">Resolver Username</th>
+                        <th scope="col">Resolver Name</th>
+                        <th scope="col">Resolver Email</th>
                         <th scope="col">Status</th>
                         <th scope="col">Receipts</th>
                         
@@ -57,6 +63,8 @@
                   <label for="exampleFormControlInput1">Author</label>
                   <p id = "author-id"></p>
                 </div>
+
+                <!-- Include username, name, and email when they are implemented-->
                 <div class="form-group">
                   <label for="exampleFormControlInput1">Amount</label>
                   <p id = "reimb-amount"></p>
