Should also add feedback and receipt feature

--- a/project-1-Stephen491/src/main/webapp/employeehome.html
+++ b/project-1-Stephen491/src/main/webapp/employeehome.html
@@ -22,6 +22,9 @@
         </nav>
         <div class = "content" >
             <h5 id="welcome-tag"></h5>
+            <div class="feedback" id="feedback">
+              <p id = "feedback-text"></p>
+            </div>
             <button type="button" class="btn btn-primary btn-lg" id="toggle-requests-button" onClick= "toggleRequests()">Show resolved requests</button>
 
             <button type="button" class="btn btn-primary btn-lg" id="leave-form-button" onClick= "leaveForm()">Go back</button>
@@ -32,7 +35,7 @@
                 <table class="table table-dark table-hover" id = "pending-reimbursements-table">
                     <thead>
                         <tr>
-                        <th scope="col">ID</th>
+                        <th scope="col">Reimbursement ID</th>
                         <th scope="col">Amount</th>
                         <th scope="col">Submitted</th>
                         <th scope="col">Type</th>
@@ -50,13 +53,13 @@
                 <table class="table table-dark table-hover" id = "resolved-reimbursements-table">
                     <thead>
                         <tr>
-                        <th scope="col">ID</th>
+                        <th scope="col">Reimbursement ID</th>
                         <th scope="col">Amount</th>
                         <th scope="col">Submitted</th>
                         <th scope="col">Resolved</th>
                         <th scope="col">Type</th>
                         <th scope="col">Description</th>
-                        <th scope="col">Resolver ID</th> <!-- remove this when resolver username, name, and email are implemented-->
+    <!-- remove this when resolver username, name, and email are implemented-->
                         <th scope="col">Resolver Username</th>
                         <th scope="col">Resolver Name</th>
                         <th scope="col">Resolver Email</th>
