--- a/project-1-Stephen491/src/main/webapp/financialmanagerhome.html
+++ b/project-1-Stephen491/src/main/webapp/financialmanagerhome.html
@@ -21,7 +21,7 @@
             <button type="button" class="btn btn-danger" onClick="logout()">Logout</button>
         </nav>
         <div class = "content" >
-          <div class="feedback" id="feedback">
+          <div id="feedback">
             <p id = "feedback-text"></p>
           </div>
             <button type="button" class="btn btn-primary btn-lg" id="leave-form-button" onClick= "leaveForm()">Go back</button>
