--- a/project-1-Stephen491/src/main/webapp/employeehome.html
+++ b/project-1-Stephen491/src/main/webapp/employeehome.html
@@ -22,7 +22,7 @@
         </nav>
         <div class = "content" >
             <h5 id="welcome-tag"></h5>
-            <div class="feedback" id="feedback">
+            <div id="feedback">
               <p id = "feedback-text"></p>
             </div>
             <button type="button" class="btn btn-primary btn-lg" id="toggle-requests-button" onClick= "toggleRequests()">Show resolved requests</button>
