--- a/project-1-Stephen491/src/main/webapp/financialmanagerhome.html
+++ b/project-1-Stephen491/src/main/webapp/financialmanagerhome.html
@@ -85,6 +85,7 @@
                 </div>
                 <div class="form-group">
                   <label for="receipt">Receipt: </label>
+                  <p id ="download-receipt"></p>
                 </div>
                 <div class="form-group">
                   <label for="exampleFormControlSelect1">Update Status</label>
