--- a/project-1-Stephen491/src/main/webapp/employeehome.html
+++ b/project-1-Stephen491/src/main/webapp/employeehome.html
@@ -96,7 +96,7 @@
                 </div>
                 <div class="form-group">
                   <label for="receipt">Receipt: </label>
-                  <input class="file-select" type="file" id="file-selector" name="receipt">
+                  <input class="file-select" type="file" id="file-selector" accept="image/jpeg,image/gif,image/png,application/pdf,image/x-eps" name="receipt">
                 </div>
                 <div class="form-group">
                   <button type="button" class="btn btn-primary btn-lg" id="submit-reimbursement" onClick="handleFormSubmit()">Submit</button>
