2nd Final version

--- a/project-1-Stephen491/src/main/webapp/financialmanagerhome.html
+++ b/project-1-Stephen491/src/main/webapp/financialmanagerhome.html
@@ -87,7 +87,7 @@
                   <label for="receipt">Receipt: </label>
                   <p id ="download-receipt"></p>
                 </div>
-                <div class="form-group">
+                <div class="form-group" id="status-select">
                   <label for="exampleFormControlSelect1">Update Status</label>
                   <select class="form-control" id="select-status" name = "status">
                     <option value = 1>Pending</option>
